fix slide layout
messed up in return from fade

--- a/src/index.css
+++ b/src/index.css
@@ -507,7 +507,7 @@ article.article-body {
 
 .pop-img {
   border-top: 6px solid #eee;
-  /* border-bottom: 6px solid #eee; */
+  border-bottom: 6px solid #eee;
   margin-bottom: 0.8em;
   position: relative;
   text-align: center;
@@ -595,7 +595,7 @@ img.slide-arrow {
 
 .slide-caption {
   padding:  0 2em;
-  min-height: 350px;
+  min-height: 250px;
 }
 
 .credits {
